Commit for heroku 1.9.2

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is the main socialgaming repository.
+This is the main ShareOnIt repository.
 
 To do the daily digest, set up a cron job to run at 6pm every day. The command
 to run should be "rails runner Notifier.daily_digest.deliver"
