--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the main ShareOnIt repository.
+This is the ShareOnIt, a community marketplace and sharing app written for a entrepreneurship at Nothwestern.
